  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih
    
********************************************************************************

  13.05.2022
  deviceServiceVersion = 1013652

  [+] Added parameter autoPrintZReport to jpos.xml to automatically print 
      Z report in beginFiscalReceipt method
  
********************************************************************************

  06.05.2022
  deviceServiceVersion = 1013651

  [-] Fixed error date and time correction
  [-] Fixed error with receipt trailer when footerFlagEnabled=0 in jpos.xml
  
********************************************************************************

  29.04.2022
  deviceServiceVersion = 1013650

  [-] Fixed error with receipt item discount
  
********************************************************************************

  21.04.2022
  deviceServiceVersion = 1013648

  [-] Fixed error header printing
  [-] Fixed error with receipt item discount
  [-] Fixed extended error code 299 to JPOS_E_TIMEOUT

********************************************************************************

  14.04.2022
  deviceServiceVersion = 1013647

  [-] Fixed error with slow receipt printing
  
********************************************************************************

  05.04.2022
  deviceServiceVersion = 1013646

  [-] Fixed error with receipt item adjustments
  
********************************************************************************

  11.02.2022
  deviceServiceVersion = 1013642

  [-] Added result check for operation tags 
  [-] Changed defaut value of parameter tagsBeforeItem to false
  
********************************************************************************

  03.02.2022
  deviceServiceVersion = 1013641

  [-] Added fix for fiscal storage message header, 
      field "P-protocol version" changed from 0x0102 to 0x0120 
      if header has no checksum
  