@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "651-1-gb844f91";
+    public static final String VERSION = "651-2-g6d6f416";
 }
